--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -47,6 +47,8 @@ pre {
   box-sizing: border-box;
 }
 
+
+
 @tailwind base;
 
 @layer base {
@@ -61,3 +63,31 @@ pre {
 
 @tailwind components;
 @tailwind utilities;
+
+a {
+  box-shadow: inset 0 0 0 0 #54b3d6;
+  color: #54b3d6;
+  padding: 0 .25rem;
+  margin: 0 +0.25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+a:hover {
+  color: #fff;
+  box-shadow: inset 300px 0 0 3px #54b3d6;;
+}
+
+/* Presentational styles */
+a {
+  color: #54b3d6;
+  font-family: 'Poppins', sans-serif;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1.5;
+  text-decoration: none;
+}
+
+body {
+  display: grid;
+  height: 100vh;
+  place-items: center;
+}
