--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -5,50 +5,6 @@
   font-style: normal;
 }
 
-pre {
-  height: 80px;
-  width: 120px;
-  margin: 20px;
-  padding: 20px;
-  display: inline-block;
-  background-color: palegreen;
-  border-width: 5px;
-  box-sizing: border-box;
-}
-.topright {
-  height: 300px;
-  width: 450px;
-  margin: 20px;
-  padding: 20px;
-  border-style: inset;
-  display: inline-block;
-  background-color: white;
-  border-width: 5px;
-  border-right: 5px solid rgba(26, 16, 16, 0);
-  border-bottom: 5px solid rgba(0, 0, 0, 0); /* Bordure de droite avec opacité 0.5 */
-
-  border-top-left-radius: 15px; /* Ajoutez cette ligne pour définir le rayon de l'angle en haut à gauche */
-  box-sizing: border-box;
-}
-
-.botleft {
-  height: 200px;
-  width: 450px;
-  margin: 20px;
-  padding: 20px;
-  border-style: inset;
-  display: inline-block;
-  background-color: white;
-  border-width: 5px;
-  border-right: 5px solid rgba(0, 0, 0, 0);
-  border-bottom: 5px solid rgba(0, 0, 0, 0); /* Bordure de droite avec opacité 0.5 */
-
-  border-top-left-radius: 15px; /* Ajoutez cette ligne pour définir le rayon de l'angle en haut à gauche */
-  box-sizing: border-box;
-}
-
-
-
 @tailwind base;
 
 @layer base {
@@ -64,20 +20,20 @@ pre {
 @tailwind components;
 @tailwind utilities;
 
-a {
+.spanim {
   box-shadow: inset 0 0 0 0 #54b3d6;
   color: #54b3d6;
   padding: 0 .25rem;
   margin: 0 +0.25rem;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
-a:hover {
+.spanim:hover {
   color: #fff;
   box-shadow: inset 300px 0 0 3px #54b3d6;;
 }
 
 /* Presentational styles */
-a {
+.spanim {
   color: #54b3d6;
   font-family: 'Poppins', sans-serif;
   font-size: 22px;
@@ -86,8 +42,5 @@ a {
   text-decoration: none;
 }
 
-body {
-  display: grid;
-  height: 100vh;
-  place-items: center;
-}
+
+
