--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -21,20 +21,20 @@
 @tailwind utilities;
 
 .spanim {
-  box-shadow: inset 0 0 0 0 #54b3d6;
-  color: #54b3d6;
+  box-shadow: inset 0 0 0 0 #070707;
+  color: #000000;
   padding: 0 .25rem;
   margin: 0 +0.25rem;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 .spanim:hover {
   color: #fff;
-  box-shadow: inset 300px 0 0 3px #54b3d6;;
+  box-shadow: inset 300px 0 0 3px #000000;;
 }
 
 /* Presentational styles */
 .spanim {
-  color: #54b3d6;
+  color: #000000;
   font-family: 'Poppins', sans-serif;
   font-size: 22px;
   font-weight: 700;
