working on transitions and links

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -42,5 +42,15 @@
   text-decoration: none;
 }
 
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
+.fade-in {
+  opacity: 1;
+  transition: opacity 1.5s ease-in;
+}
+
 
 
